# ICML-2025-Official-Implementation-for-STAR

./: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt  train.py
config/: collect_data.yaml  train_base.yaml  train_cst.yaml  train_rarsq.yaml
config/algo/: base.yaml  data_collect.yaml  star.yaml
config/algo/aug/: image.yaml
config/algo/encoder/image/: resnet.yaml
config/algo/encoder/lowdim/: mlp.yaml
config/task/: libero_10.yaml  libero_90.yaml  libero_base.yaml  libero_goal.yaml  libero_object.yaml  libero_spatial.yaml  metaworld_base.yaml  metaworld_mt50.yaml
scripts/: generate_metaworld_dataset.py
star/algos/: base.py  star.py
star/algos/star_modules/: cst.py  rarsq.py  rarsq_quantizer.py  residual_skill_quantizer.py
star/algos/utils/: data_augmentation.py  mlp_proj.py  obs_core.py  rgb_modules.py
star/env_runner/: libero_runner.py  metaworld_runner.py
star/utils/: dataset.py  file_utils.py  frame_stack.py  libero_utils.py  logger.py  metaworld_utils.py  obs_utils.py  tensor_utils.py  utils.py
