[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "star"
version = "0.1.0"
authors = [
    {name = "Hao Li"},
    {name = "Qi Lv"},
    {name = "Rui Shao"},
    {name = "Xiang Deng"},
    {name = "Yinchuan Li"},
    {name = "Jianye Hao"},
    {name = "Liqiang Nie"},
]
description = "Code for STAR: Learning Diverse Robot Skill Abstractions through Rotation-Augmented Vector Quantization"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = {find = {}}
